data/work/traefik-gateway-tls/httproute-headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: headlamp
spec:
  parentRefs:
  - name: traefik
    namespace: traefik-system 
  hostnames:
  - "headlamp.feed.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
